--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-postgresql-14-anonymizer (1.1.0-1) unstable; urgency=low
+postgresql-anonymizer (1.1.0-1) unstable; urgency=low
 
   * Initial release.
 
-   -- Damien Clochard <daamien@gmail.com>  Sun, 26 Sep 2022 19:19:36 +0100
+ -- Damien Clochard <daamien@gmail.com>  Sun, 26 Sep 2022 19:19:36 +0100
