--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postgresql-anonymizer (1.2.0-1) unstable; urgency=low
+
+  * Improve debian packaging
+
+ -- Damien Clochard <daamien@gmail.com>  Sun, 3 Oct 2022 08:00:00 +0100
+
 postgresql-anonymizer (1.1.0-1) unstable; urgency=low
 
   * Initial release.
